--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Zhexi Lu"
   avatar           : "profile.png"
   bio              : "Stay hungry, Stay foolish"
-  location         : "Location"
+  location         : "ShenZhen, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
